# dialin

./: .gitignore  .gitmodules  ChangeLog.md  LICENSE  Procfile  README.md  cabal.project  default.nix  dialin-configuration.nix  dialin-ec2.nix  dialin.cabal  dialin.nix  package.yaml  stack.yaml  yaml-cabal
backend/: backend.cabal
backend/snaplets/heist/templates/: _login.tpl  base.tpl  index.tpl  new_bean.tpl  recent_brews.tpl  reflex_app.tpl  userform.tpl
backend/src/: Models.hs  Server.hs  Site.hs
backend/src/Models/: Grind.hs  Rating.hs
common/: common.cabal
common/src/Common/: Api.hs  Foo.hs  Model.hs
frontend/: frontend.cabal  gui
frontend/src/: Main-preActive.hs  Main.hs
snaplets/heist/templates/: _login.tpl  _register.tpl  base.tpl  index.tpl  new_brew.tpl  recent_brews.tpl
src/: Api.hs  Grind.hs  Models.hs  Rating.hs  Server.hs  Site.hs
src/Types/: App.hs
